; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/time/extr_gmtime.c__gmtime32.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/time/extr_gmtime.c__gmtime32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tm* @_gmtime32(i32* %0) #0 {
  %2 = alloca %struct.tm*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store %struct.tm* null, %struct.tm** %2, align 8
  br label %12

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %4, align 4
  %11 = call %struct.tm* @_gmtime64(i32* %4)
  store %struct.tm* %11, %struct.tm** %2, align 8
  br label %12

12:                                               ; preds = %8, %7
  %13 = load %struct.tm*, %struct.tm** %2, align 8
  ret %struct.tm* %13
}

declare dso_local %struct.tm* @_gmtime64(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
